Fixed CV button whitespace issue, experiemented with light mode toggle & root css class

--- a/style.css
+++ b/style.css
@@ -6,14 +6,28 @@ body {
 }
 
 body {
-    background: #202231;
+    background: var(--body-bg-color);
 }
+
+.light-mode {
+    background: var(--body-light-color);
+    
+  }
+
+/* #region || COLOURS */
+
+:root{
+    --main-light-color: white;
+    --main-otherlight-color: wheat;
+    --body-bg-color: #202231;
+    --main-bg-color: #67615F;
+  }
 
 /* #region || GENERAL STYLES */
 
 .main {
     /* animation: 0.6s ease-out 0s 1 loadDown; */
-    background: #67615F;
+    background: var(--main-bg-color);
     width: 50%;
     position: static;
     float: centre;
@@ -100,7 +114,7 @@ li{
     border-radius: 8px;
 }
 
-.contacts {
+.buttoncontainer {
     display: flex;
     justify-content: center;
     gap: 15px;
@@ -236,6 +250,10 @@ button {
     transition: 200ms;
     border-radius: 8px;
 }
+
+/* a {
+    font-size: 0;
+  } */
 
 button:hover {
     background-color: #080837b4;
